# tractasono-svn

trunk/: .sconsign  AUTHORS  ChangeLog  Makefile.am  NEWS  README  SConstruct  TODO  autogen.sh  configure.in  database.c  database.h  drives.c  drives.h  interface.c  interface.h  ipod.c  ipod.h  main.c  player.c  player.h  settings.c  settings.h  tractasono.glade  tractasono.h
trunk/data/: gedanken.txt  requirements
trunk/data/seektest/: Makefile  scrubby  seek
trunk/debian/: changelog  control  copyright  rules
trunk/doc/: Makefile.am  README  SETUP
trunk/pixmaps/CVS/: Entries  Repository  Root
trunk/spider/: Makefile.am  main.c
trunk/sql/: genres.sql  lookupcriteriaterms.sql
trunk/src/: Makefile.am  database.c  database.h  database_schema.c  database_schema.h  disc.c  disc.h  drives.c  drives.h  fullscreen.c  fullscreen.h  gtk-circle.c  gtk-circle.h  interface.c  interface.h  ipod.c  ipod.h  keyboard.c  keyboard.h  lcd.c  lcd.h  main.c  music.c  music.h  musicbrainz.c  musicbrainz.h  player.c  player.h  playlist.c  playlist.h  radio.c  radio.h  server.c  server.h  settings.c  settings.h  strukturen.c  strukturen.h  tractasono.h  upnp-cp.c  (+3 more)
trunk/src/data/: .tractasono  Makefile.am  genres.xml  tractasono.desktop  tractasono.glade  tractasono.ui
trunk/src/data/seektest/: seek.c
trunk/src/data/sonstiges/: gedanken.txt  gstreamer-pipelines.txt  requirements
trunk/src/data/sql/: Makefile.am  genres.sql  mysql2sqlite.pl  schema.sql  tractasono.db  tractasono.sql  tractasono_dump.sql
trunk/src/data/sql/backups/: _20070702_1817.sql
trunk/tools/cdlookup/: Makefile.am  cdlookup2.c
trunk/tools/spider/: Makefile.am  main.c  spider.c
