# Init
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(tractasono, 0.1)
AM_CONFIG_HEADER(src/config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries
PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_CFLAGS)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.8.0)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

PKG_CHECK_MODULES(GNOMEVFS, gnome-vfs-2.0)
AC_SUBST(GNOMEVFS_LIBS)
AC_SUBST(GNOMEVFS_CFLAGS)

PKG_CHECK_MODULES(LIBGLADE, libglade-2.0)
AC_SUBST(LIBGLADE_LIBS)
AC_SUBST(LIBGLADE_CFLAGS)

PKG_CHECK_MODULES(GCONF, gconf-2.0)
AC_SUBST(GCONF_LIBS)
AC_SUBST(GCONF_CFLAGS)

PKG_CHECK_MODULES(GSTREAMER, gstreamer-0.10)
AC_SUBST(GSTREAMER_LIBS)
AC_SUBST(GSTREAMER_CFLAGS)

PKG_CHECK_MODULES(GSTPLUGINS, gstreamer-plugins-base-0.10)
AC_SUBST(GSTPLUGINS_LIBS)
AC_SUBST(GSTPLUGINS_CFLAGS)

PKG_CHECK_MODULES(MUSICBRAINZ, libmusicbrainz)
AC_SUBST(MUSICBRAINZ_LIBS)
AC_SUBST(MUSICBRAINZ_CFLAGS)

PKG_CHECK_MODULES(MEDIAPROFILES, gnome-media-profiles)
AC_SUBST(MEDIAPROFILES_CFLAGS)
AC_SUBST(MEDIAPROFILES_LIBS)

PKG_CHECK_MODULES(LIBGDA, libgda-3.0)
AC_SUBST(LIBGDA_LIBS)
AC_SUBST(LIBGDA_CFLAGS)

PKG_CHECK_MODULES(LIBGNOMEDB, libgnomedb-3.0)
AC_SUBST(LIBGNOMEDB_LIBS)
AC_SUBST(LIBGNOMEDB_CFLAGS)

PKG_CHECK_MODULES(LIBGPOD, libgpod-1.0)
AC_SUBST(LIBGPOD_LIBS)
AC_SUBST(LIBGPOD_CFLAGS)

PKG_CHECK_MODULES(LIBIPODDEVICE, ipoddevice)
AC_SUBST(LIBIPODDEVICE_LIBS)
AC_SUBST(LIBIPODDEVICE_CFLAGS)

PKG_CHECK_MODULES(TOTEMPLPARSE, totem-plparser)
AC_SUBST(TOTEMPLPARSE_LIBS)
AC_SUBST(TOTEMPLPARSE_CFLAGS)

PKG_CHECK_MODULES(TAGLIB, taglib)
AC_SUBST(TAGLIB_LIBS)
AC_SUBST(TAGLIB_CFLAGS)

# Makefile output
AC_OUTPUT([ Makefile \
			doc/Makefile \
			tools/cdlookup/Makefile \
			tools/spider/Makefile \
			src/data/Makefile \
			src/Makefile ])

# Nette Ausgabe
AC_MSG_RESULT([
  ************************************************************
 * tractasono $VERSION:  Automatic configuration OK.
**
**  Installation directories:
**
**     Program: ................. ${prefix}/bin
**
**************************************************************
**
**  Type 'make' to compile tractasono.
** 
**  Have fun with tractasono!
 *
  ************************************************************
])  
