# Init
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(tractasono, 0.2)
AM_CONFIG_HEADER(src/config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries
PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_LIBS)
AC_SUBST(GLIB_CFLAGS)

PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

PKG_CHECK_MODULES(GIO, gio-2.0)
AC_SUBST(GIO_LIBS)
AC_SUBST(GIO_CFLAGS)

PKG_CHECK_MODULES(GLADE, libglade-2.0)
AC_SUBST(GLADE_LIBS)
AC_SUBST(GLADE_CFLAGS)

PKG_CHECK_MODULES(GSTREAMER, gstreamer-0.10)
AC_SUBST(GSTREAMER_LIBS)
AC_SUBST(GSTREAMER_CFLAGS)

PKG_CHECK_MODULES(GSTPLUGINS, gstreamer-plugins-base-0.10)
AC_SUBST(GSTPLUGINS_LIBS)
AC_SUBST(GSTPLUGINS_CFLAGS)

PKG_CHECK_MODULES(MUSICBRAINZ, libmusicbrainz)
AC_SUBST(MUSICBRAINZ_LIBS)
AC_SUBST(MUSICBRAINZ_CFLAGS)

PKG_CHECK_MODULES(TOTEMPLPARSE, totem-plparser)
AC_SUBST(TOTEMPLPARSE_LIBS)
AC_SUBST(TOTEMPLPARSE_CFLAGS)

PKG_CHECK_MODULES(GUPNP, gupnp-1.0)
AC_SUBST(GUPNP_LIBS)
AC_SUBST(GUPNP_CFLAGS)

PKG_CHECK_MODULES(SQLITE, sqlite3)
AC_SUBST(SQLITE_LIBS)
AC_SUBST(SQLITE_CFLAGS)

PKG_CHECK_MODULES(TAGLIB, taglib)
AC_SUBST(TAGLIB_LIBS)
AC_SUBST(TAGLIB_CFLAGS)

# SVN Revision
SVN=`which svn 2>/dev/null`
if test -d ".svn" -a "x${SVN}" != "x" -a -x "${SVN}"
then
	REVISION=r`$SVN info|grep 'Last Changed Rev'|cut -d' ' -f4`
fi
AC_DEFINE_UNQUOTED([REVISION], "$REVISION", [subversion revision number])

# Makefile output
AC_OUTPUT([ Makefile \
			doc/Makefile \
			tools/cdlookup/Makefile \
			tools/spider/Makefile \
			src/data/sql/Makefile \
			src/data/Makefile \
			src/Makefile ])

# Nice output
echo "*******************************************************"
echo "*  $PACKAGE $VERSION:  Automatic configuration OK."
echo "*"
if test "$REVISION" != ""
then
	echo "*  Compiling Subversion revision: $REVISION"
	echo "*"
fi
echo "*  Installation directories:"
echo "*     Program: ................. ${prefix}/bin"
echo "*"
echo "*  Type 'make' to compile $PACKAGE."
echo "*******************************************************"
