# Init
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(tractasono, 0.2)
AM_CONFIG_HEADER(src/config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries
PKG_CHECK_MODULES(LIBS, glib-2.0 \
						gtk+-2.0 \
						gio-2.0 \
						gstreamer-0.10 \
						gstreamer-plugins-base-0.10 \
						libmusicbrainz \
						totem-plparser \
						sqlite3 \
						taglib_c)
AC_SUBST(LIBS_LIBS)
AC_SUBST(LIBS_CFLAGS)

# SVN Revision
SVN=`which svn 2>/dev/null`
if test -d ".svn" -a "x${SVN}" != "x" -a -x "${SVN}"
then
	REVISION=r`$SVN info|grep 'Last Changed Rev'|cut -d' ' -f4`
fi
AC_DEFINE_UNQUOTED([REVISION], "$REVISION", [subversion revision number])

# Makefile output
AC_OUTPUT([ Makefile \
			doc/Makefile \
			src/data/sql/Makefile \
			src/data/Makefile \
			src/Makefile ])

# Nice output
echo "*******************************************************"
echo "*  $PACKAGE $VERSION:  Automatic configuration OK."
echo "*"
if test "$REVISION" != ""
then
	echo "*  Compiling Subversion revision: $REVISION"
	echo "*"
fi
echo "*  Installation directories:"
echo "*     Program: ................. ${prefix}/bin"
echo "*"
echo "*  Type 'make' to compile $PACKAGE."
echo "*******************************************************"
