
# App Images
sharedir = $(prefix)/share/tractasono
share_DATA = tractasono.ui \
			 fullscreen.png \
			 music.png \
			 disc.png \
			 settings.png \
			 tractasono.png \
			 internetradio.png \
			 ipod.png			 

# App Icon
pixmapdir = $(prefix)/share/pixmaps
pixmap_DATA = tractasono-icon.png

# Desktop Menu Entry
desktopdir = $(prefix)/share/applications
desktop_DATA = tractasono.desktop


EXTRA_DIST = $(share_DATA) \
			 $(pixmap_DATA) \
			 $(desktop_DATA)
